<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Layout and navbar</string>
    <string name="ShowRebootOpt">Show reboot</string>
    <string name="RebootString">Reboot</string>
    <string name="TracksString">Tracks</string>
    <string name="CallsString">Calls</string>
    <string name="AboutString">About</string>
    <string name="RecoveryString">Recovery</string>
    <string name="bShowRebootOpt">Show reboot</string>
    <string name="sShowRebootOpt">If not enabled - framework-res.apk does not contain STRINGS reboot or reboot_system, and ICON ic_lock_reboot.</string>
    <string name="bShowRecoveryOpt">Show Recovery</string>
    <string name="sShowRecoveryOpt">If not enabled- framework-res.apk does not contain STRINGS recovery or recovery_system, and ICON ic_lock_recovery.</string>
    <string name="bEndCallByPower">End by power</string>
    <string name="sEndCallByPower">End incoming call by pressing power button</string>
    <string name="bGetCallByVolumeUp">Get call by VolUp</string>
    <string name="sGetCallByVolumeUp">Get call by pressing Volume Up button</string>
    <string name="sVolumeUp">Volume Up</string>
    <string name="sUseVolumeButtons">React on Volume Buttons</string>
    <string name="sUseVolumeButtonsS">React on Volume Buttons long press</string>
    <string name="sUseVolumeUp">React on Volume Up</string>
    <string name="sUseVolumeUpS">React on Volume Up button press</string>
    <string name="sTypePReaction">Player Reaction</string>
    <string name="sTypeRReaction">Radio Reaction</string>
    <string name="sVolumeDown">Volume Down</string>
    <string name="sUseVolumeDown">React on Volume Down</string>
    <string name="sUseVolumeDownS">React on Volume Down button press</string>
    <string name="About1">A reboot is necessary after changing layout!</string>
    <string name="About2">Preview:</string>
    <string name="About3">7OH @ xda-developers.com</string>
    <string name="About4">Clicking here will move you to advanced statistics tab..</string>
    <string name="CustomString">Statusbar</string>
    <string name="sLockScreen">LockScreen</string>
    <string name="sLockScrenType">LockScreen Type</string>
    <string name="sStatusBar">StatusBar</string>
    <string name="sDisableSBonLS">Disable StatusBar on LockScreen</string>
    <string name="sDisableSBonLSSum">Disable StatusBar on LockScreen even if nonSecure</string>
    <string name="sVolumeBeep">Volume Beep</string>
    <string name="sVolumeBeepOpt">Volume Beep</string>
    <string name="sVolumeBeepSum">Beep on volume change</string>
    <string name="bUseExtLockScreen">Use External LockScreen</string>
    <string name="bUseExtLockScreenS">Try to use external LockScreen First</string>
    <string name="NavBarResfresh">Refresh</string>
    <string name="NavBarEnable">Enable</string>
    <string name="NavBarDisable">Disable</string>
    <string name="sNavBar">On screen buttons</string>
    <string name="sNavBarDescr">Changing some options require ROOT rights and Results You can saw ONLY after reboot your phone.</string>
    <string name="PowerString">Power Menu</string>
    <string name="ScreenShotString">ScreenShot</string>
    <string name="bShowScreenShotOpt">Show ScreenShot</string>
    <string name="sShowScreenShotOpt">If not enabled - framework-res.apk does not contain STRINGS screenshot, and ICON ic_lock_screenshot або ic_menu_gallery.</string>
    <string name="sCamera">Camera</string>
    <string name="sUseCamera">React on Camera</string>
    <string name="sUseCameraS">React on Camera long press for Pause</string>
    <string name="ExRebootString">Extended Reboot</string>
    <string name="bShowExtendedRebootOpt">Use extended reboot</string>
    <string name="sShowExtendedRebootOpt">Replace standart reboot with extended: reboot, revocery, fastboot, restartX.</string>
    <string name="sNavBarSizeTitle">Size of NavBar</string>
    <string name="sHeight">Height</string>
    <string name="sWidth">Width</string>
    <string name="sStatusBarType">Statusbar layout</string>
    <string name="sAlign">Icons in statusbar</string>
    <string name="RestartXString">Restart X</string>
    <string name="rebootMenuT">Reboot phone</string>
    <string name="sNavBarEnable">Navbar state</string>
    <string name="m7ShowClockOpt">Show Clock</string>
    <string name="m7ShowClockSum">Show Clock in StatusBar</string>
    <string name="m7ShowOperatorOpt">Show Operator</string>
    <string name="m7ShowOperatorSum">Show operators name in StatusBar</string>
    <string name="sNetworkName">Android ID</string>
    <string name="sZRamGeneral">Select ZRam size and press APPLY or WRITE. APPLY will try to apply on the fly. WRITE will write to boot-script.</string>
    <string name="sZRamApply">Apply</string>
    <string name="sZRamWrite">Write</string>
    <string name="sZRamTitle">ZRam control</string>
    <string name="sZRamSize">ZRam Size</string>
    <string name="sVolumeExt">Extend Volume Steps</string>
    <string name="sVolumeExtOpt">30 steps</string>
    <string name="sVolumeExtSum">Extend volume steps from 15 to 30</string>
    <string name="LinkTogglesTitle">7OH Toggles</string>
    <string name="sHeapGeneral">Select VMHeap size and press APPLY. It will changes to build.prop. Then reboot if You wish to see changes.</string>
    <string name="sNavBarDesc">Navbar</string>
</resources>
