<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/PowerString">
        <PreferenceCategory android:title="@string/ExRebootString">
            <CheckBoxPreference android:title="@string/bShowExtendedRebootOpt" android:key="m7ShowRecoveryOpt" android:summary="@string/sShowExtendedRebootOpt" android:defaultValue="false" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/TracksString">
        <PreferenceCategory android:title="@string/sVolumeUp">
            <CheckBoxPreference android:title="@string/sUseVolumeUp" android:key="m7UseVolumeUp" android:summary="@string/sUseVolumeUpS" android:defaultValue="false" />
            <ListPreference android:entries="@array/TrackTypes" android:title="@string/sTypePReaction" android:key="m7VolumeUpPReaction" android:defaultValue="2" android:entryValues="@array/ReactValues" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/sVolumeDown">
            <CheckBoxPreference android:title="@string/sUseVolumeDown" android:key="m7UseVolumeDown" android:summary="@string/sUseVolumeDownS" android:defaultValue="false" />
            <ListPreference android:entries="@array/TrackTypes" android:title="@string/sTypePReaction" android:key="m7VolumeDownPReaction" android:defaultValue="1" android:entryValues="@array/ReactValues" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/CallsString">
        <PreferenceCategory android:title="@string/CallsString">
            <CheckBoxPreference android:title="@string/bEndCallByPower" android:key="m7EndCallByPower" android:summary="@string/sEndCallByPower" android:defaultValue="false" />
            <CheckBoxPreference android:title="@string/bGetCallByVolumeUp" android:key="m7GetCallByVolumeUp" android:summary="@string/sGetCallByVolumeUp" android:defaultValue="false" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/CustomString">
        <PreferenceCategory android:title="@string/sVolumeBeep">
            <CheckBoxPreference android:title="@string/sVolumeBeepOpt" android:key="m7VolumeBeep" android:summary="@string/sVolumeBeepSum" android:defaultValue="false" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/sVolumeExt">
            <CheckBoxPreference android:title="@string/sVolumeExtOpt" android:key="m7VolumeExt" android:summary="@string/sVolumeExtSum" android:defaultValue="false" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/sNetworkName">
            <EditTextPreference android:key="m7NetworkName" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/sZRamTitle" android:key="lZRam">
        <ListPreference android:entries="@array/zRams" android:title="@string/sZRamSize" android:key="m7ZRamSize" android:defaultValue="0" android:entryValues="@array/zRamsValues" />
        <PreferenceScreen android:layout="@layout/zram" android:key="lZRam2" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/AboutString">
        <PreferenceScreen android:layout="@layout/main" />
    </PreferenceScreen>
</PreferenceScreen>