<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <!--PreferenceScreen android:title="@string/TracksString">
        <CheckBoxPreference android:title="@string/sUseVolumeButtons" android:key="m7UseVolumeButtons" android:summary="@string/sUseVolumeButtonsS" android:defaultValue="false" />
        <PreferenceCategory android:title="@string/sVolumeUp">
            <ListPreference android:entries="@array/TrackTypes" android:title="@string/sTypePReaction" android:key="m7VolumeUpPReaction" android:defaultValue="2" android:entryValues="@array/ReactValues" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/sVolumeDown">
            <ListPreference android:entries="@array/TrackTypes" android:title="@string/sTypePReaction" android:key="m7VolumeDownPReaction" android:defaultValue="1" android:entryValues="@array/ReactValues" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/CallsString">
        <PreferenceCategory android:title="@string/CallsString">
            <CheckBoxPreference android:title="@string/bEndCallByPower" android:key="m7EndCallByPower" android:summary="@string/sEndCallByPower" android:defaultValue="false" />
            <CheckBoxPreference android:title="@string/bGetCallByVolumeUp" android:key="m7GetCallByVolumeUp" android:summary="@string/sGetCallByVolumeUp" android:defaultValue="false" />
        </PreferenceCategory>
    </PreferenceScreen-->
    <PreferenceScreen android:title="@string/CustomString">
        <!--PreferenceCategory android:title="@string/sVolumeBeep">
            <CheckBoxPreference android:title="@string/sVolumeBeepOpt" android:key="m7VolumeBeep" android:summary="@string/sVolumeBeepSum" android:defaultValue="false" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/sVolumeExt">
            <CheckBoxPreference android:title="@string/sVolumeExtOpt" android:key="m7VolumeExt" android:summary="@string/sVolumeExtSum" android:defaultValue="false" />
        </PreferenceCategory-->
        <PreferenceCategory android:title="@string/sStatusBarType">
            <ListPreference android:entries="@array/StatusBarTypes5" android:title="@string/sAlign" android:key="m7StatusBarType" android:defaultValue="0" android:entryValues="@array/StatusBarValues5" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/sNetworkName">
            <EditTextPreference android:key="m7NetworkName" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/sNavBar" android:key="lNavBar">
        <PreferenceCategory android:title="@string/sNavBarDesc">
            <ListPreference android:entries="@array/NavBarUses" android:title="@string/sNavBarEnable" android:key="m7NavBarOnOff" android:defaultValue="0" android:entryValues="@array/NavBarUsesValues" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/sNavBarSizeTitle">
            <ListPreference android:entries="@array/NavBarSizeNames" android:title="@string/sHeight" android:key="m7NavBarHeight" android:defaultValue="0" android:entryValues="@array/NavBarSizeValues" />
            <ListPreference android:entries="@array/NavBarSizeNames" android:title="@string/sWidth" android:key="m7NavBarWidth" android:defaultValue="0" android:entryValues="@array/NavBarSizeValues" />
        </PreferenceCategory>
    </PreferenceScreen>
    <!--PreferenceScreen android:title="@string/sZRamTitle" android:key="lZRam">
        <ListPreference android:entries="@array/zRams" android:title="@string/sZRamSize" android:key="m7ZRamSize" android:defaultValue="0" android:entryValues="@array/zRamsValues" />
        <PreferenceScreen android:layout="@layout/zram" android:key="lZRam2" />
    </PreferenceScreen-->
    <PreferenceScreen android:title="@string/AboutString">
        <PreferenceScreen android:layout="@layout/main" />
    </PreferenceScreen>
</PreferenceScreen>
