<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sNavBarDescr" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/nbEnable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/NavBarEnable" android:layout_weight="0.5" android:onClick="onNavBarEnableClick" />
        <Button android:id="@id/nbDisable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/NavBarDisable" android:layout_weight="0.5" android:onClick="onNavBarDisableClick" />
    </LinearLayout>
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
    <Button android:id="@id/nbReboot" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/RestartXString" android:onClick="onRebootClick" />
</LinearLayout>